// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PokemonList displays error state correctly 1`] = `
<Text>
  Error loading data
</Text>
`;

exports[`PokemonList displays loading state correctly 1`] = `
<Text>
  Loading...
</Text>
`;

exports[`PokemonList navigates on press 1`] = `
<RCTScrollView
  data={
    [
      {
        "name": "Bulbasaur",
      },
      {
        "name": "Charmander",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="PokemonList"
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "borderColor": "#666",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-around",
            "opacity": 1,
            "padding": 15,
          }
        }
      >
        <Image
          source={
            {
              "uri": undefined,
            }
          }
          style={
            {
              "resizeMode": "cover",
            }
          }
        />
        <Text
          style={
            {
              "color": "#000",
              "fontSize": 22,
            }
          }
        >
          Bulbasaur
        </Text>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "borderColor": "#666",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-around",
            "opacity": 1,
            "padding": 15,
          }
        }
      >
        <Image
          source={
            {
              "uri": undefined,
            }
          }
          style={
            {
              "resizeMode": "cover",
            }
          }
        />
        <Text
          style={
            {
              "color": "#000",
              "fontSize": 22,
            }
          }
        >
          Charmander
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PokemonList renders list of pokemons correctly 1`] = `
<RCTScrollView
  data={
    [
      {
        "name": "Bulbasaur",
      },
      {
        "name": "Charmander",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="PokemonList"
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "borderColor": "#666",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-around",
            "opacity": 1,
            "padding": 15,
          }
        }
      >
        <Image
          source={
            {
              "uri": undefined,
            }
          }
          style={
            {
              "resizeMode": "cover",
            }
          }
        />
        <Text
          style={
            {
              "color": "#000",
              "fontSize": 22,
            }
          }
        >
          Bulbasaur
        </Text>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "borderColor": "#666",
            "borderTopWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-around",
            "opacity": 1,
            "padding": 15,
          }
        }
      >
        <Image
          source={
            {
              "uri": undefined,
            }
          }
          style={
            {
              "resizeMode": "cover",
            }
          }
        />
        <Text
          style={
            {
              "color": "#000",
              "fontSize": 22,
            }
          }
        >
          Charmander
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
